// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Composite: Pagination renders with defaultProps 1`] = `
<div
  className="ax-inline-group ax-button-group ax-space--x6 ax-text--align-center"
>
  <div
    className="ax-inline-group__spacer"
  >
    <button
      className="ax-button ax-button--accent ax-button--quaternary ax-button--circle-small"
      data-ax-at="108487691436"
      disabled={true}
      onClick={[Function]}
    >
      <svg
        className="ax-icon ax-icon--chevron-left"
        dangerouslySetInnerHTML={
          Object {
            "__html": "",
          }
        }
        style={
          Object {
            "height": "1rem",
            "width": "1rem",
          }
        }
        viewBox="0 0 16 16"
      />
    </button>
    <button
      className="ax-button ax-button--accent ax-button--primary ax-button--circle-small"
      onClick={[Function]}
    >
      1
    </button>
    <button
      className="ax-button ax-button--accent ax-button--quaternary ax-button--circle-small"
      onClick={[Function]}
    >
      2
    </button>
    <button
      className="ax-button ax-button--accent ax-button--quaternary ax-button--circle-small"
      onClick={[Function]}
    >
      3
    </button>
    <button
      className="ax-button ax-button--accent ax-button--quaternary ax-button--circle-small"
      onClick={[Function]}
    >
      4
    </button>
    <button
      className="ax-button ax-button--accent ax-button--quaternary ax-button--circle-small"
      onClick={[Function]}
    >
      5
    </button>
    <button
      className="ax-button ax-button--accent ax-button--quaternary ax-button--circle-small"
      onClick={[Function]}
    >
      6
    </button>
    <button
      className="ax-button ax-button--accent ax-button--quaternary ax-button--circle-small"
      onClick={[Function]}
    >
      7
    </button>
    <button
      className="ax-button ax-button--accent ax-button--quaternary ax-button--circle-small"
      disabled={true}
      onClick={[Function]}
    >
      <svg
        className="ax-icon ax-icon--ellipsis"
        dangerouslySetInnerHTML={
          Object {
            "__html": "",
          }
        }
        style={
          Object {
            "height": "1rem",
            "width": "1rem",
          }
        }
        viewBox="0 0 16 16"
      />
    </button>
    <button
      className="ax-button ax-button--accent ax-button--quaternary ax-button--circle-small"
      data-ax-at="fdb0ab990230"
      onClick={[Function]}
    >
      10
    </button>
    <button
      className="ax-button ax-button--accent ax-button--quaternary ax-button--circle-small"
      data-ax-at="e43741906502"
      disabled={false}
      onClick={[Function]}
    >
      <svg
        className="ax-icon ax-icon--chevron-right"
        dangerouslySetInnerHTML={
          Object {
            "__html": "",
          }
        }
        style={
          Object {
            "height": "1rem",
            "width": "1rem",
          }
        }
        viewBox="0 0 16 16"
      />
    </button>
  </div>
</div>
`;

exports[`Composite: Pagination renders without displayRange 1`] = `
<div
  className="ax-inline-group ax-button-group ax-space--x6 ax-text--align-center"
>
  <div
    className="ax-inline-group__spacer"
  >
    <button
      className="ax-button ax-button--accent ax-button--quaternary ax-button--circle-small"
      data-ax-at="108487691436"
      disabled={true}
      onClick={[Function]}
    >
      <svg
        className="ax-icon ax-icon--chevron-left"
        dangerouslySetInnerHTML={
          Object {
            "__html": "",
          }
        }
        style={
          Object {
            "height": "1rem",
            "width": "1rem",
          }
        }
        viewBox="0 0 16 16"
      />
    </button>
    <button
      className="ax-button ax-button--accent ax-button--quaternary ax-button--circle-small"
      data-ax-at="e43741906502"
      disabled={false}
      onClick={[Function]}
    >
      <svg
        className="ax-icon ax-icon--chevron-right"
        dangerouslySetInnerHTML={
          Object {
            "__html": "",
          }
        }
        style={
          Object {
            "height": "1rem",
            "width": "1rem",
          }
        }
        viewBox="0 0 16 16"
      />
    </button>
  </div>
</div>
`;

exports[`Composite: Pagination renders without pages 1`] = `
<div
  className="ax-inline-group ax-button-group ax-space--x6 ax-text--align-center"
>
  <div
    className="ax-inline-group__spacer"
  >
    <button
      className="ax-button ax-button--accent ax-button--quaternary ax-button--circle-small"
      data-ax-at="108487691436"
      disabled={true}
      onClick={[Function]}
    >
      <svg
        className="ax-icon ax-icon--chevron-left"
        dangerouslySetInnerHTML={
          Object {
            "__html": "",
          }
        }
        style={
          Object {
            "height": "1rem",
            "width": "1rem",
          }
        }
        viewBox="0 0 16 16"
      />
    </button>
    <button
      className="ax-button ax-button--accent ax-button--quaternary ax-button--circle-small"
      data-ax-at="e43741906502"
      disabled={false}
      onClick={[Function]}
    >
      <svg
        className="ax-icon ax-icon--chevron-right"
        dangerouslySetInnerHTML={
          Object {
            "__html": "",
          }
        }
        style={
          Object {
            "height": "1rem",
            "width": "1rem",
          }
        }
        viewBox="0 0 16 16"
      />
    </button>
  </div>
</div>
`;
